--- a/apps/playground/src/styles.scss
+++ b/apps/playground/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use "index" as cac;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@include cac.scrollbar;
