--- a/libs/base/src/shared/components/features/table/table.component.html
+++ b/libs/base/src/shared/components/features/table/table.component.html
@@ -322,7 +322,7 @@
         ></tr>
       </table>
     </div>
-    <div class="hide-if-empty px-12 py-3 border-t border-inherit flex gap-16">
+    <div class="empty:hidden px-12 py-3 border-t border-inherit flex gap-16">
       <ng-content select="[slot=footer]"></ng-content>
     </div>
   </div>
