--- a/libs/base/src/theme/material.scss
+++ b/libs/base/src/theme/material.scss
@@ -1,80 +1,7 @@
 @use '@angular/material' as mat;
+@use './m3-theme';
+
 @include mat.core();
-
-$primary-colors: (
-  50: var(--primary-50),
-  100: var(--primary-100),
-  200: var(--primary-200),
-  300: var(--primary-300),
-  400: var(--primary-400),
-  500: var(--primary-500),
-  600: var(--primary-600),
-  700: var(--primary-700),
-  800: var(--primary-800),
-  900: var(--primary-900),
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #ffffff,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-  ),
-);
-
-$accent-colors: (
-  50: var(--secondary-50),
-  100: var(--secondary-100),
-  200: var(--secondary-200),
-  300: var(--secondary-300),
-  400: var(--secondary-400),
-  500: var(--secondary-500),
-  600: var(--secondary-600),
-  700: var(--secondary-700),
-  800: var(--secondary-800),
-  900: var(--secondary-900),
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #ffffff,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-  ),
-);
-
-$warn-colors: (
-  50: var(--error-50),
-  100: var(--error-100),
-  200: var(--error-200),
-  300: var(--error-300),
-  400: var(--error-400),
-  500: var(--error-500),
-  600: var(--error-600),
-  700: var(--error-700),
-  800: var(--error-800),
-  900: var(--error-900),
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-  ),
-);
 
 .mat-elevation-z1 {
   @apply shadow-1 #{!important};
@@ -92,24 +19,22 @@ $warn-colors: (
   @apply shadow-5 #{!important};
 }
 
-$typography: mat.define-typography-config(
-  $font-family: 'Estedad',
-);
+html {
+  @include mat.color-variants-backwards-compatibility(m3-theme.$light-theme);
+  @include mat.all-component-themes(m3-theme.$light-theme);
+  @include mat.system-level-colors(m3-theme.$light-theme);
+  @include mat.system-level-typography(m3-theme.$light-theme);
+}
 
-$primary-palette: mat.define-palette($primary-colors);
-$accent-palette: mat.define-palette($accent-colors);
-$warn-palette: mat.define-palette($warn-colors);
 
-$theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $primary-palette,
-      accent: $accent-palette,
-      warn: $warn-palette,
-    ),
-    typography: $typography,
-    density: 0,
-  )
-);
-
-@include mat.all-component-themes($theme);
+//html {
+//  // Apply the dark theme by default
+//  @include mat.all-component-themes($dark-theme);
+//
+//  // Apply the light theme only when the user prefers light themes.
+//  @media (prefers-color-scheme: light) {
+//    // Use the `-color` mixins to only apply color styles without reapplying the same
+//    // typography and density styles.
+//    @include mat.all-component-themes($light-theme);
+//  }
+//}
