--- a/libs/base/src/shared/components/features/dialog/components/calendar-dialog/calendar-dialog.component.html
+++ b/libs/base/src/shared/components/features/dialog/components/calendar-dialog/calendar-dialog.component.html
@@ -1,1 +1,1 @@
-<ui-date-picker [switch]="'calendar'" mode="range" (date)="onSave($event)"></ui-date-picker>
+<ui-date-picker [type]="'calendar'" mode="range" (date)="onSave($event)"></ui-date-picker>
