--- a/libs/base/src/shared/components/ui/checkbox-group/checkbox-group.component.html
+++ b/libs/base/src/shared/components/ui/checkbox-group/checkbox-group.component.html
@@ -1,6 +1,6 @@
 <div class="w-full h-full flex flex-col select-none">
   <p class="{{ control.invalid && control.dirty ? 'text-red-dark' : 'text-blue-dark' }}">
-    {{ label ?? '' }}<span *ngIf="isRequired" class="text-red-dark">*</span>
+    {{ label ?? '' }}<span *ngIf="isRequired()" class="text-red-dark">*</span>
   </p>
   <div class="h-full flex flex-col">
     <mat-checkbox
