--- a/apps/playground/src/app/ui/checkbox-page/checkbox-page.component.html
+++ b/apps/playground/src/app/ui/checkbox-page/checkbox-page.component.html
@@ -2,3 +2,11 @@
   <ui-checkbox>Normal</ui-checkbox>
   <ui-checkbox [indeterminate]="true">Indeterminate</ui-checkbox>
 </app-test-section>
+
+<app-test-section title="Checkbox Group">
+  <ui-checkbox-group [items]="items">
+    <ui-checkbox>Label1</ui-checkbox>
+    <ui-checkbox>Label2</ui-checkbox>
+    <ui-checkbox>Label3</ui-checkbox>
+  </ui-checkbox-group>
+</app-test-section>
