--- a/libs/base/src/shared/components/ui/chips/chips.component.html
+++ b/libs/base/src/shared/components/ui/chips/chips.component.html
@@ -1,8 +1,14 @@
+<ui-icon
+  *ngIf="icon"
+  class="ui-chips-icon"
+  size="1.5rem"
+  [icon]="icon"
+></ui-icon>
 <ng-content></ng-content>
 <ui-icon
   *ngIf="closable"
-  class="w-5 h-5 ms-2 text-surface-on"
-  wrapperClass="hover:bg-secondary-200"
+  class="ui-chips-close-btn"
+  wrapperClass="ui-chips-close-icon-wrapper"
   size="1.5rem"
   icon="close"
   (onClick)="onCloseClick($event)"
