--- a/libs/base/src/shared/components/ui/chips/chips.component.scss
+++ b/libs/base/src/shared/components/ui/chips/chips.component.scss
@@ -1,7 +1,7 @@
 :host {
   &.ui-chips {
     @apply transition-all duration-100 rounded-2 text-sm font-medium;
-    @apply flex items-center justify-center py-2 px-2.5 gap-1;
+    @apply inline-flex items-center justify-center py-2 px-2.5 gap-1;
     @apply select-none cursor-pointer;
     white-space: nowrap;
 
@@ -47,4 +47,15 @@
       }
     }
   }
+}
+
+:host ::ng-deep .ui-chips-close-btn {
+  @apply w-5 h-5 ms-0.5 text-surface-on;
+  .ui-chips-close-icon-wrapper {
+    @apply hover:bg-secondary-200;
+  }
+}
+
+:host ::ng-deep .ui-chips-icon {
+  @apply w-5 h-5 text-inherit;
 }
