--- a/libs/base/src/shared/components/ui/icon/icon.component.html
+++ b/libs/base/src/shared/components/ui/icon/icon.component.html
@@ -1,7 +1,7 @@
 <div
   role="presentation"
   class="ui-icon relative {{ disabled ? 'disabled' : '' }} w-full h-full {{ wrapperClass }}"
-  [class.is-clickable]="isClickable() || true"
+  [class.is-clickable]="isClickable()"
   (click)="onClickEvent($event)"
 >
   <mat-icon
