--- a/libs/base/src/shared/components/ui/field/field.component.scss
+++ b/libs/base/src/shared/components/ui/field/field.component.scss
@@ -128,6 +128,13 @@
     }
   }
 
+  .mdc-text-field {
+    @apply ps-3 pe-0.5 #{!important};
+  }
+  .mdc-notched-outline__notch {
+    @apply pe-0 ps-0 #{!important};
+  }
+
   // Styled Properties
 
   &.ui-field-outlined {
