--- a/apps/playground/src/app/app.component.html
+++ b/apps/playground/src/app/app.component.html
@@ -3,9 +3,13 @@
 <p class="">TESTXXzz</p>
 
 <div class="w-40 h-40 overflow-auto m-9 border border-red-100">
-  <div class="w-full h-screen"></div>
+  <div class="w-full h-screen transition-none"></div>
 </div>
 
 <div class="p-6">
   <div class="w-4 h-4 bg-red-500 animate-rotate"></div>
+</div>
+
+<div class="h-screen">
+
 </div>
