--- a/libs/base/src/shared/components/ui/button/button.component.html
+++ b/libs/base/src/shared/components/ui/button/button.component.html
@@ -29,10 +29,10 @@
 </div>
 
 <ng-template #Icon>
-  <mat-icon
+  <ui-icon
     class="transition-colors"
     *ngIf="!!icon"
-    [svgIcon]="icon"
+    [icon]="icon"
     [style]="'width:' + iconSize + ';height:' + iconSize"
-  ></mat-icon>
+  ></ui-icon>
 </ng-template>
