--- a/libs/base/src/shared/components/ui/icon/icon.component.html
+++ b/libs/base/src/shared/components/ui/icon/icon.component.html
@@ -5,6 +5,7 @@
   (click)="onClickEvent($event)"
 >
   <mat-icon
+    #MatIcon
     class="{{ iconClass ?? '' }}"
     [ngStyle]="{ width: size, height: size }"
     *ngIf="!!icon"
