--- a/libs/base/src/shared/components/ui/pagination/pagination.component.html
+++ b/libs/base/src/shared/components/ui/pagination/pagination.component.html
@@ -72,7 +72,6 @@
 
 <ng-template #SizeSelect>
   <div class="flex items-baseline gap-4">
-    <span class="text-outline">نمایش</span>
     <ui-field
       controlType="select"
       class="w-32 flex"
@@ -82,7 +81,7 @@
       [searchable]="false"
     >
     </ui-field>
-    <span class="text-outline">ردیف در صفحه</span>
+    <span class="text-outline">تعداد نمایش در هر صفحه</span>
   </div>
 </ng-template>
 
