--- a/libs/base/src/shared/components/features/table/columns/table-col-selection/table-col-selection.component.html
+++ b/libs/base/src/shared/components/features/table/columns/table-col-selection/table-col-selection.component.html
@@ -10,7 +10,7 @@
   <td mat-cell *matCellDef="let row; let i = index" style="width: 3rem">
     <ui-checkbox
       [checked]="options.selectionModel!.selectedIds()[row.id]"
-      (onChange)="onSelect.emit({row: row.originalItem, state: $event})"
+      (onChange)="onSelect.emit({row: row, state: $event})"
     ></ui-checkbox>
   </td>
 </ng-container>
