Added localization + Fixes

--- a/libs/base/src/styles.scss
+++ b/libs/base/src/styles.scss
@@ -1,6 +1,10 @@
-@import 'theme/colors';
-@import 'theme/material';
-@import 'theme/design-system';
+@use 'theme/colors';
+@use 'theme/material';
+@use 'theme/design-system';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 mat-label,
 label,
